--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding-bottom: 30px;
 }
 ul {
   list-style: none;
@@ -9,3 +10,9 @@ ul {
   margin: 0;
   padding: 0;
 }
+button {
+  cursor: pointer;
+}
+/* .ReactModalPortal .ReactModal__Overlay--after-open {
+  background-color: #0000008c !important;
+} */
