--- a/src/components/ImageModal/ImageModal.module.css
+++ b/src/components/ImageModal/ImageModal.module.css
@@ -2,8 +2,9 @@
   font-size: 24px;
   display: flex;
   justify-content: space-between;
-  gap: 10px;
+  gap: 40px;
   color: white;
+  width: 100%;
 }
 .author {
   text-transform: capitalize;
